force-app/main/default/objects/User/fields/Admin_Flag_field__c.field-meta.xml
<CustomField>
    <fullName>Admin_Flag_field__c</fullName>
    <label>Admin Flag field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>