force-app/main/default/objects/User/fields/Calendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Name__c</fullName>
    <label>Calendly Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>