force-app/main/default/objects/User/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <description>Used in Email templates for the clause &quot;© orderbird AG 2011-{{{Sender.Current_Year__c}}} All Rights Reserved&quot;
Can be removed if templates work in a more elegant way</description>
    <formula>TEXT(YEAR( TODAY() ))</formula>
    <label>Current Year</label>
    <type>Text</type>
</CustomField>