force-app/main/default/objects/User/fields/Happy_Customers__c.field-meta.xml
<CustomField>
    <fullName>Happy_Customers__c</fullName>
    <formula>10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Happy Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>