force-app/main/default/objects/User/fields/Inactive_for_Cases__c.field-meta.xml
<CustomField>
    <fullName>Inactive_for_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive for Cases</label>
    <type>Checkbox</type>
</CustomField>