force-app/main/default/objects/User/fields/IsNetsuiteInactiveUser__c.field-meta.xml
<CustomField>
    <fullName>IsNetsuiteInactiveUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Netsuite inactive User</label>
    <type>Checkbox</type>
</CustomField>