force-app/main/default/objects/User/fields/NetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteId__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>