force-app/main/default/objects/User/fields/Opt_In_for_Case_Owner_Mails__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_for_Case_Owner_Mails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-352</description>
    <inlineHelpText>Do you wanna get a notification mail when a case gets assigned to you?</inlineHelpText>
    <label>Opt In for Case Owner Mails</label>
    <type>Checkbox</type>
</CustomField>