force-app/main/default/objects/User/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>When did this user start working for orderbird?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>