force-app/main/default/objects/User/fields/Template_Footer_Insert_DE__c.field-meta.xml
<CustomField>
    <fullName>Template_Footer_Insert_DE__c</fullName>
    <label>Template Footer Insert DE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>