force-app/main/default/objects/User/fields/wbsendit__Campaign_Monitor_User__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
    <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
    <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
    <label>Campaign Monitor User</label>
    <type>Email</type>
</CustomField>