force-app/main/default/objects/User/listViews/X004_Live_Agent_Users.listView-meta.xml
<ListView>
    <fullName>X004_Live_Agent_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>IS_FROZEN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LIVEAGENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>004 Live Agent Users</label>
    <language>en_US</language>
</ListView>