force-app/main/default/objects/User/listViews/X04_00_Support.listView-meta.xml
<ListView>
    <fullName>X04_00_Support</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>IS_FROZEN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>contains</operation>
        <value>Support</value>
    </filters>
    <label>04-00 Support</label>
    <language>en_US</language>
</ListView>